--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -31,3 +31,6 @@ project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacit
 
 include ':capawesome-capacitor-file-picker'
 project(':capawesome-capacitor-file-picker').projectDir = new File('../node_modules/@capawesome/capacitor-file-picker/android')
+
+include ':mat2718-capacitor-face-detection'
+project(':mat2718-capacitor-face-detection').projectDir = new File('../node_modules/@mat2718/capacitor-face-detection/android')
